Edited wiki page through web user interface.

--- a/wiki/WhatsTheDifference.wiki
+++ b/wiki/WhatsTheDifference.wiki
@@ -10,12 +10,14 @@ The version of Enso that can be downloaded from http://www.humanized.com/enso is
 
 Frozen Enso is a binary-only distribuion, based on a closed-source code-line kept on a private SVN server.  Development on it has ceased and will not be resumed.  Development-wise, it's a dead end; but it will continue to be the version that users download and install, and Humanized will continue to distribute and support it, until such time as development on the open source Enso code-line creates a suitable replacement.
 
-Frozen Enso runs on Windows 2000, XP, and Vista only.  It uses a build process based on py2exe to bundle the Enso Python code, along with the Python interpreter, into a Windows executable file for distribution.
+Frozen Enso runs on Windows 2000, XP, and Vista only.  In technical terms, it uses a build process based on py2exe to bundle the Enso Python code, along with the Python interpreter, into a Windows executable file for distribution.
 
 = Open-Source Enso =
 
-The version of Enso in this repository is the new open-source version.  It's based on an all-new code tree, which is starting from scratch with a blank history.  Modules and chunks of code are rapidly being brought over from the old code and integrated.  Think of it as a combination of code migration and massive refactoring to remove all the cruft that Enso no longer needs.
+The version of Enso in this repository is the new open-source version.  It's based on an all-new code tree, which is starting from scratch with a blank history.  Modules and chunks of code are rapidly being brought over from the old code and integrated.  Think of it as a combination of code migration and massive refactoring to remove all the cruft that Enso no longer needs, and to make Enso more flexible towards certain things that it needs to support better, such as internationalization and cross-platform support.
 
 Our immediate goal is to get open-source Enso to a point where we have the quasimode working (that is to say, you can hold Caps Lock, see a transparent message, and start typing a command into it) on all three platforms; and where we have at least the three commands *open*, *google*, and *calculate* working on all three platforms.
 
-We're trying to take a very Pythonic approach to open-source Enso.  We will not be using py2exe or its equivalent to bundle up Enso into an executable binary; instead, we plan to distribute it as a Python package everywhere (so that you could in principle start Enso by going to a Python prompt and saying "import enso" followed by "enso.run()".)  Most available versions of Linux and OS X come with Python pre-installed.  That leaves Windows: We're going to have to find a way to get Python installed for Windows users of Enso, in the most humane way possible.  As a long-term goal, we'd like to help make Python a better platform for development of desktop Windows apps by making it easier to deploy the Python interpreter there.
+We're trying to take a very Pythonic approach to open-source Enso.  We will not _initially_ be using py2exe or its equivalent to bundle up Enso into an executable binary; instead, we plan to distribute it as a standard Python package, to make it as easy as possible for developers to use and extend it.
+
+Once open-source Enso matures to the point that it's at least as functional and stable as Frozen Enso, we'll also package and distribute a pre-compiled binary in whatever way is most humane for non-technical end users.  On OS X, this may not involve too much since Python and a number of supporting packages come with the operating system, but on Windows this may involve either freezing Enso with py2exe or transparently "bootstrapping" the Python platform onto the host machine if it's not already there.
