--- a/wiki/ExtendingEnso.wiki
+++ b/wiki/ExtendingEnso.wiki
@@ -21,3 +21,5 @@ enso.config.PLUGINS.extend(
     [ "mypackage.myplugin" ]
     )
 }}}
+
+(This is a trivial, temporary change to see if svn commit logs are being sent properly.)
